<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>emanondev.deepdungeons</groupId>
	<artifactId>DeepDungeons</artifactId>
	<version>3.0</version>
	<packaging>jar</packaging>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>

	<build>
		<finalName>${project.name}-${project.version}</finalName>
		<resources>
			<resource>
				<directory>src/main/resources</directory>
				<filtering>true</filtering>
			</resource>
		</resources>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.1</version>
				<configuration>
					<source>17</source>
					<target>17</target>
				</configuration>
			</plugin>
		</plugins>
	</build>

	<repositories>
		<!-- Party -->
		<repository>
			<id>alessiodp-repo</id>
			<url>https://repo.alessiodp.com/releases/</url>
		</repository>
		<!-- Spigot -->
		<repository>
			<id>spigot-repo</id>
			<url>https://hub.spigotmc.org/nexus/content/repositories/public/</url>
		</repository>
		<!-- JitPack -->
		<repository>
			<id>jitpack.io</id>
			<url>https://jitpack.io</url>
		</repository>
		<!-- CodeMC repository -->
		<repository>
			<id>CodeMC</id>
			<url>https://repo.codemc.io/repository/maven-public/</url>
		</repository>
		<!-- ProtocolLib repo -->
		<repository>
			<id>dmulloy2-repo</id>
			<url>https://repo.dmulloy2.net/nexus/repository/public/</url>
		</repository>
		<!-- PlaceholderAPI repo -->
		<repository>
			<id>placeholderapi</id>
			<url>https://repo.extendedclip.com/content/repositories/placeholderapi/</url>
		</repository>
		<!-- MythicMobs repo -->
		<repository>
			<id>nexus</id>
			<name>Lumine Releases</name>
			<url>https://mvn.lumine.io/repository/maven-public/</url>
		</repository>
		<!-- WorldEdit repo -->
		<repository>
			<id>enginehub-maven</id>
			<url>https://maven.enginehub.org/repo/</url>
		</repository>
	</repositories>
	<dependencies>
		<!-- Party -->
		<dependency>
			<groupId>com.alessiodp.parties</groupId>
			<artifactId>parties-api</artifactId>
			<version>3.1.12</version>
			<scope>provided</scope>
		</dependency>
		<!-- Spigot -->
		<dependency>
			<groupId>org.spigotmc</groupId>
			<artifactId>spigot-api</artifactId>
			<version>1.17.1-R0.1-SNAPSHOT</version>
			<type>jar</type>
			<scope>provided</scope>
		</dependency>
		<!-- SuperVanish -->
		<dependency>
			<groupId>com.github.LeonMangler</groupId>
			<artifactId>SuperVanish</artifactId>
			<version>6.2.6-2</version>
			<scope>provided</scope>
		</dependency>
		<!-- JetBrains Annotations -->
		<dependency>
			<groupId>org.jetbrains</groupId>
			<artifactId>annotations</artifactId>
			<version>16.0.1</version>
			<scope>provided</scope>
		</dependency>
		<!-- Vault -->
		<dependency>
			<groupId>com.github.MilkBowl</groupId>
			<artifactId>VaultAPI</artifactId>
			<version>1.7</version>
			<scope>provided</scope>
		</dependency>
		<!-- PlaceHolderAPI -->
		<dependency>
			<groupId>me.clip</groupId>
			<artifactId>placeholderapi</artifactId>
			<version>2.10.9</version>
			<scope>provided</scope>
		</dependency>
		<!-- ItemEdit -->
		<dependency>
			<groupId>emanondev.itemedit</groupId>
			<artifactId>ItemEdit</artifactId>
			<version>2.20a</version>
			<scope>provided</scope>
		</dependency>
		<!-- MythicMobs -->
		<dependency>
			<groupId>io.lumine.xikage</groupId>
			<artifactId>MythicMobs</artifactId>
			<version>4.9.1</version>
			<scope>provided</scope>
		</dependency>
		<!-- This depends on the Bukkit API, Use this if you need BukkitAdapter -->
		<dependency>
			<groupId>com.sk89q.worldedit</groupId>
			<artifactId>worldedit-bukkit</artifactId>
			<version>7.2.0-SNAPSHOT</version>
			<scope>provided</scope>
		</dependency>
		<!-- DeepCore -->
		<dependency>
			<groupId>emanondev.core</groupId>
			<artifactId>DeepCore</artifactId>
			<version>3.1</version>
			<scope>provided</scope>
		</dependency>
	</dependencies>
</project>